docs(kafka): make production guidance KRaft-first